--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -94,6 +94,8 @@ html, body {
 .nav_icon {
   width: 50px;
   height: 60px;
-  margin-top: 20px;
-  margin-bottom: 40px;
 }
+
+
+// 고사장 리뷰 nav-bar 레이아웃
+
