--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,121 +28,28 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-</head>
-<body>
-  <nav id="main_nav" style="top:0px; left:0px; 
-                            width:60px; height:100%; 
-                            position:absolute;
-                            background-color:white;
-                            border-right: 1px solid black;
-                            border-left: 1px solid black;
-                            z-index:1000000000;">
-    <center>
-      <a href="/">
-        <div class="nav_icon" id="home_menu" style="background-image:url(/icons/logo5060.png);">
-        </div>
-      </a>      
-      <div class="nav_icon" id="user_menu" style="background-image:url(/icons/user_icon2_5060.png);
-                                                  cursor:pointer;">
-      </div>
-      <div class="nav_icon" id="map_menu" style="background-image:url(/icons/map_icon.png);
-                                                 cursor:pointer;">
-      </div>
-      <a href="/home/labreview">
-        <div class="nav_icon" id="review_menu" style="background-image:url(/icons/review_icon.png);">
-        </div>
-      </a>
-    </center>
-  </nav>
-
-  <nav id="user_drawer" style="left:60px;width:200px; height:100%; position:absolute;
-                          background-color:#232323; opacity:0.9; z-index:100000;">  
-    <div style="padding-top:45px;">
-      <center>
-        <% if user_signed_in? %>
-          <%if current_user.image.url.nil? %>
-            <img src="user_image.png" style="margin-bottom:30px">
-          <%else%>
-            <img src="<%=current_user.image.thumb.url%>" style="margin-bottom:30px" class="img-circle">
-          <%end%>
-          <p style="color:white;"><%= current_user.email %></p>
-          <a href="/home/mypage" style="color:white;">마이페이지</a> | <a href="/users/sign_out" style="color:white;">로그아웃</a>   
-        <% else %>
-          <img src="user_image.png" style="margin-bottom:30px"><br>
-          <a href="/users/sign_in" style="color:white;">로그인</a> | <a href="/users/sign_up" style="color:white;">회원가입</a>
-        <% end %>
-      </center>
-    </div>
-  </nav>
   
   <script>
     $(function() {
-      $('#user_drawer').hide();
+      $('#r_drawer').hide();
+    });
+  </script>
+  
+  <script>
+    $(function() {
       $('#user_menu').click(function() {
+        $('#map_drawer').hide();
         $('#user_drawer').toggle('slide',300);
       });
     });
   </script>
   
-  <nav id="map_drawer" style="left:60px;width:200px; height:100%; position:absolute;
-                          background-color:#232323; opacity:0.9; z-index:100000;">
-  </nav>
-  
   <script>
     $(function() {
-      $('#map_drawer').hide();
       $('#map_menu').click(function() {
-        $('#map_drawer').toggle('slide',300);
+        $('#user_drawer').hide();
+        $('#map_drawer').classList.toggle('open');
       });
-    });
-  </script>
-  
-  <nav id="drawer">
-    <br>
-    <div style="width:200px; padding-left:30px; padding-top:20px; color:white;">
-      <div id="convertable">
-        <a href='/' style="text-decoration:none; color:black;">
-          <div id="map_button" style="cursor:pointer; margin-bottom:30px;">
-            <p style="font-size:20px;">시험장 지도</p>
-          </div>
-        </a>
-      </div>
-        
-      <div id="map_under" style="width:157px; padding-left:30px; margin-top:-20px; padding-bottom:8px; position:relative;">
-        <p id="region_1" style="cursor:pointer;"> - 서울</p>
-        <p id="current" style="cursor:pointer;"> - 현재 위치</p>
-        <p id="near_by" style="cursor:pointer;"> - 가까운 시험장</p>
-          <input id="region_1_lat" type="hidden" value=37.549565>
-          <input id="region_1_lng" type="hidden" value=126.989131>
-        <p id="direction0" style="font-size:17px; cursor:pointer;">길찾기 모드</p>
-        <p id="direction1" style="font-size:17px; cursor:pointer;">길찾기 모드 --- 실행중...</p>
-      </div>
-      
-      <a href="/home/labreview" style="text-decoration:none; color:black;">
-        <div id="labreview" style="cursor:pointer; margin-bottom:30px;">
-          <p style="font-size:20px; color:white;">시험장 후기</p>
-        </div>
-      </a>
-      
-      <a href="/home/testreview" style="text-decoration:none; color:black;">
-        <div id="testreview" style="cursor:pointer; margin-bottom:30px;">
-          <p style="font-size:20px; color:white;">시험 후기</p>
-        </div>
-      </a>
-    </div>
-  </nav>
-  
-  <div id="exit_diretion_mode" style="position:absolute; width:48px; height:48px; background-image:url(/exit_icon.png);
-                                      top:60px; left:10px; cursor:pointer; z-index:10000;">
-  </div>
-  <script>
-    $(function() {
-      $('#menu_open').hide();
-      $('#map_under').hide();
-      $('#r_drawer').hide();
-      $('#exit_diretion_mode').hide();
-      $('#direction1').hide();
-      $('#direction_alert').hide();
     });
   </script>
     
@@ -155,81 +62,88 @@
       $('#current').click(function() {
         region_center = undefined;
         secondCall(pos, 14);
-        $('#drawer').toggle('slide', 0);
-        $('#menu_close').hide();
-        $('#menu_open').show();
       });
       $('#region_1').click(function() {
         lat = $('#region_1_lat').val();
         lng = $('#region_1_lng').val();
         region_center = new google.maps.LatLng(lat, lng);
         secondCall(region_center, 11);
-        $('#drawer').toggle('slide', 0);
-        $('#menu_close').hide();
-        $('#menu_open').show();
-      });
-      $('#direction0').click(function() {
-        mode_index = 1;
-        $('#direction0').hide();
-        $('#direction1').show();
-        $('#direction_alert').toggle('slide',{direction:'right'},300);
-        console.log('direction mode index'+':'+mode_index);
-        $('#exit_diretion_mode').show();
-        $('#drawer').toggle('slide', 0);
-        $('#menu_close').hide();
-        $('#menu_open').show();
-      });
-      $('#direction1').click(function() {
-        mode_index = 0;
-        $('#direction1').hide();
-        $('#direction0').show();
-        $('#direction_alert').toggle('slide',{direction:'right'},300);
-        console.log('direction mode index'+':'+mode_index);
-        $('#exit_diretion_mode').hide();
-      });
-      $('#exit_diretion_mode').click(function() {
-        mode_index = 0;
-        $('#direction1').hide();
-        $('#direction0').show();
-        $('#direction_alert').toggle('slide',{direction:'right'},300);
-        console.log('direction mode index'+':'+mode_index);
-        $('#exit_diretion_mode').hide();
-        $('#drawer').toggle('slide', 300);
-        $('#menu_open').hide();
-        $('#menu_close').show();
-      });
     });
   </script>
+</head>
+<body>
+  <nav id="main_nav_top" style="top:0px; left:0px;
+                                width:100%; height:40px;
+                                position:absolute;
+                                background-color:white;
+                                z-index:10000000000;
+                                box-shadow: 0px 0px 10px #bdbdbd;">
+  <div class="row">
+    <div class="col-sm-2 col-md-2"></div>
+    <div class="col-xs-6 col-sm-8 col-md-8">
+      <center>
+        <a href='/' style="text-decoration:none; color:black;">
+          <b><h4><span style="color:red;">TO</span>map</h4></b>
+        </a>
+      </center>
+    </div>
+    <div class="col-xs-6 col-sm-2 col-md-2">
+      <center>
+        <div style="padding-top :10px; ">
+          <% if user_signed_in? %>
+            <div class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+              <ul class="dropdown-menu" style="margin-left:20px">
+                <li><center>
+                  <%if current_user.image.url.nil? %>
+                    <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-64.png" />
+                  <%else%>
+                    <img src="<%=current_user.image.thumb.url%>" class="img-circle">
+                  <%end%>  
+                </center></li><br>
+                <li><center><%= current_user.email %></center></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="/home/mypage"><center>마이페이지</center></a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="/users/sign_out"><center>로그아웃</center></a></li>
+              </ul>
+            </div>
+          
+          <% else %>
+            <a href="/users/sign_in" style="text-decoration:none; color:black;">로그인</a>
+          <% end %>  
+            
+        
+        </div>
+      </center>
+    </div>
+  </nav>
+  <nav id="main_nav_left" style="left:0px;
+                            width:60px; height:100%; 
+                            position:absolute;
+                            background-color: #eaeaea;
+                            border-right: 0px solid black;
+                            border-left: 0px solid black;
+                            z-index:1000000000;
+                            box-shadow: inset 0px 0px 10px #bdbdbd;">
+    <center style="padding-top:100px;">
+      <div class="nav_icon" id="map_menu">
+        <img src="https://cdn2.iconfinder.com/data/icons/flat-ui-icons-24-px/24/location-24-32.png">
+        <p style="padding-top: 5px;"><b>MAP</b></p>
+      </div>
+      
+      <div style="height : 30px">
+      </div>
+      
+      <a href="/home/labreview" style="text-decoration:none; color:black;">
+        <div class="nav_icon" id="review_menu">
+          <img src="https://cdn0.iconfinder.com/data/icons/layout-and-location/24/Untitled-2-21-24.png">
+          <p style="padding-top: 5px; font-size:12px;"><b>REVIEW</b></p>
+        </div>
+      </a>
+    </center>
+  </nav>
   
- 
-    <div id="menu_open" style="width:32px; height:32px; 
-                               position: absolute; top: 8px; left: 15px;
-                               cursor: pointer;
-                               background-image: url(/icon_menu_open.png);"></div>
-    <div id="menu_close" style="width:32px; height:32px;
-                               position: absolute; top: 8px; left: 15px;
-                               cursor: pointer;
-                               background-image: url(/icon_menu_close.png);"></div>
-    <script>
-      $(function() {
-        $('#drawer').hide();
-        $('#menu_close').hide();
-        $('#menu_open').click(function() {
-          $('#drawer').toggle('slide','right', 300);
-          $('#menu_open').hide();
-          $('#menu_close').show();
-        });
-        $('#menu_close').click(function() {
-          $('#drawer').toggle('slide', 300);
-          $('#menu_close').hide();
-          $('#menu_open').show();
-        });
-      });
-    </script>
-    
-    
- 
-
   <%= yield %>
 </body>
 </html>
