--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -8,7 +8,7 @@ $('[data-toggle=collapse]').click(function(){
 });
 </script>
 <br><br>
-<div class="row">
+<div class="row" style="padding-top:20px;">
   <div class="col-md-2 col-md-offset-2">
     <a href="#"><strong><i class="glyphicon glyphicon-home"></i>&nbsp;후기</strong></a><br>
       <ul class="nav nav-stacked">
@@ -143,7 +143,8 @@ $('[data-toggle=collapse]').click(function(){
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
-            </div><!-- /btn-group -->
+            </div>
+            <!-- /btn-group -->
             <input type="text" class="form-control" aria-label="...">
           </div>
         </div>
@@ -181,6 +182,7 @@ $('[data-toggle=collapse]').click(function(){
                   <td style="text-align:center">12</td>
               </tr>
               <div class="modal fade" id="<%=x.id%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <br><br>
                 <div class="modal-dialog modal-lg" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
@@ -248,6 +250,7 @@ $('[data-toggle=collapse]').click(function(){
                 <td style="text-align:center">12</td>
             </tr>
             <div class="modal fade" id="<%=x.id%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <br><br>
               <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
